<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FirstScreen"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:src="@drawable/ic_photo"
            android:contentDescription="@string/icon_kampus_merdeka" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:inputType="text"
            android:autofillHints="Name"
            android:hint="@string/name"
            android:background="@drawable/rounded_edittext"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edtPalindrome"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/palindrome"
            android:autofillHints="Palindrome"
            android:inputType="text"
            android:background="@drawable/rounded_edittext"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/palindromeButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/check_palindrome"
            android:background="@drawable/first_screen_button"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:text="@string/next"
            android:background="@drawable/first_screen_button"
            />

    </LinearLayout>
</RelativeLayout>